# rust-actix-web-events-service

./: .env  Cargo.toml  LICENSE  Readme.md
src/: events_handler.rs  health_handler.rs  main.rs
