[package]
name = "rust-events-service"
version = "0.1.0"
authors = ["cecildt <cecildt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
chrono = { version = "0.4.11", features = ["serde"] }
derive_more = "0.99.5"
diesel = { version = "1.4.4", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.4"
r2d2 = "0.8.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
actix-service = "1.0.5"
alcoholic_jwt = "1.0.0"
reqwest = "0.10.4"
actix-rt = "1.1.1"
env_logger = "0.7.1"
log = "0.4.8"